[gd_scene load_steps=14 format=3 uid="uid://cabr002sdouvf"]

[ext_resource type="Script" path="res://LandScape/Level.gd" id="1_ydmjt"]
[ext_resource type="Script" path="res://addons/twitcher/twitch_irc_channel.gd" id="3_1y7y0"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_2nncq"]
seed = 946565412
fractal_octaves = 7

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hdmjw"]
seed = 1977217490
frequency = 0.008
fractal_octaves = 10
fractal_lacunarity = 1.0
fractal_gain = 0.75

[sub_resource type="Gradient" id="Gradient_im2qv"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_amhhf"]
gradient = SubResource("Gradient_im2qv")
width = 100
height = 40

[sub_resource type="Gradient" id="Gradient_2iqsk"]
offsets = PackedFloat32Array(0, 0.00938967)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_x1d8p"]
gradient = SubResource("Gradient_2iqsk")
width = 100
height = 40

[sub_resource type="Gradient" id="Gradient_wf2k0"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b4ji6"]
gradient = SubResource("Gradient_wf2k0")
width = 100
height = 40

[sub_resource type="Gradient" id="Gradient_04b2p"]
offsets = PackedFloat32Array(0, 0.0140845)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u3b1t"]
gradient = SubResource("Gradient_04b2p")
width = 100
height = 40

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_8xn6w"]

[node name="Level" type="Node2D"]
script = ExtResource("1_ydmjt")
noise = SubResource("FastNoiseLite_2nncq")
surfacenoise = SubResource("FastNoiseLite_hdmjw")
WindTimer = null

[node name="TwitchIrcChannel" type="Node" parent="."]
script = ExtResource("3_1y7y0")
channel_name = "Coltari"

[node name="water" type="Node" parent="."]

[node name="ground" type="Node" parent="."]

[node name="players" type="Node" parent="."]

[node name="projectiles" type="Node" parent="."]

[node name="ui" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="ui"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="ui/VBoxContainer"]
layout_mode = 2
text = "spawn worm"

[node name="Button2" type="Button" parent="ui/VBoxContainer"]
layout_mode = 2
text = "refresh landmass
"

[node name="Label" type="Label" parent="ui"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_right = 125.0
offset_bottom = 25.0
grow_horizontal = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="WindBarRight" type="TextureProgressBar" parent="ui"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 40.0
grow_horizontal = 2
rounded = true
texture_under = SubResource("GradientTexture2D_amhhf")
texture_progress = SubResource("GradientTexture2D_x1d8p")
tint_under = Color(0.190762, 0.190762, 0.190762, 1)
tint_progress = Color(0.654401, 0.00375343, 0.970806, 1)

[node name="WindBarLeft" type="TextureProgressBar" parent="ui"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 40.0
offset_right = 50.0
offset_bottom = 80.0
grow_horizontal = 2
rotation = 3.14159
rounded = true
texture_under = SubResource("GradientTexture2D_b4ji6")
texture_progress = SubResource("GradientTexture2D_u3b1t")
tint_under = Color(0.192157, 0.192157, 0.192157, 1)
tint_progress = Color(0.624656, 0.00360307, 0.943339, 1)

[node name="deathzone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="deathzone"]
position = Vector2(538, 656)
shape = SubResource("WorldBoundaryShape2D_8xn6w")
debug_color = Color(0.84868, 0.00091949, 0.903118, 0.42)

[node name="WindTimer" type="Timer" parent="."]
one_shot = true

[connection signal="message_received" from="TwitchIrcChannel" to="." method="_on_twitch_irc_channel_message_received"]
[connection signal="pressed" from="ui/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ui/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="body_entered" from="deathzone" to="." method="_on_deathzone_body_entered"]
[connection signal="timeout" from="WindTimer" to="." method="_on_wind_timer_timeout"]
